--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux-persist-transform-encrypt": "^5.1.1",
