--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux-persist-transform-encrypt": "^5.1.1",
     "tailwind-merge": "^2.5.4",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
